--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -27,7 +27,6 @@ libutils_la_SOURCES = utils.h utils.c
 
 TESTS_ENVIRONMENT = THREADSAFETY_FILES=$(top_srcdir)/lib/*/*.c
 
-test_programs = simple cram-md5
-
-TESTS = $(test_programs) threadsafety
-check_PROGRAMS = $(test_programs)
+TESTS = simple cram-md5 threadsafety
+check_PROGRAMS = simple cram-md5
+dist_check_SCRIPTS = threadsafety
