--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -57,7 +57,7 @@ extern "C"
       GSASL_MALLOC_ERROR = 7,
       GSASL_BASE64_ERROR = 8,
       GSASL_CRYPTO_ERROR = 9,
-      GSASL_GCRYPT_ERROR = GSASL_CRYPTO_ERROR = 10,
+      GSASL_GCRYPT_ERROR = GSASL_CRYPTO_ERROR,
       GSASL_NEED_CLIENT_ANONYMOUS_CALLBACK = 11,
       GSASL_NEED_CLIENT_PASSWORD_CALLBACK = 12,
       GSASL_NEED_CLIENT_PASSCODE_CALLBACK = 13,
@@ -104,7 +104,8 @@ extern "C"
       GSASL_NO_ANONYMOUS_TOKEN = 52,
       GSASL_NO_AUTHID = 53,
       GSASL_NO_AUTHZID = 54,
-      GSASL_NO_PASSWORD = 55
+      GSASL_NO_PASSWORD = 55,
+      GSASL_CANNOT_VALIDATE = 56
     } Gsasl_rc;
 
 /* Quality of Protection types, used by DIGEST-MD5 */
@@ -133,10 +134,10 @@ extern "C"
   /* Callback/property types. */
   typedef enum
   {
+    GSASL_AUTHID,
+    GSASL_AUTHZID,
+    GSASL_PASSWORD,
     GSASL_CLIENT_ANONYMOUS,
-    GSASL_CLIENT_AUTHID,
-    GSASL_CLIENT_AUTHZID,
-    GSASL_CLIENT_PASSWORD,
     GSASL_CLIENT_PASSCODE,
     GSASL_CLIENT_PIN,
     GSASL_CLIENT_SERVICE,
