--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -106,7 +106,8 @@ extern "C"
       GSASL_NO_AUTHZID = 54,
       GSASL_NO_PASSWORD = 55,
       GSASL_NO_SERVICE = 56,
-      GSASL_CANNOT_VALIDATE = 57
+      GSASL_NO_HOSTNAME = 57,
+      GSASL_CANNOT_VALIDATE = 58
     } Gsasl_rc;
 
 /* Quality of Protection types, used by DIGEST-MD5 */
@@ -142,6 +143,7 @@ extern "C"
     GSASL_CLIENT_PASSCODE,
     GSASL_CLIENT_PIN,
     GSASL_CLIENT_SERVICE,
+    GSASL_CLIENT_HOSTNAME,
     GSASL_CLIENT_QOP,
     GSASL_CLIENT_MAXBUF,
     GSASL_SERVER_VALIDATE,
