--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -27,7 +27,7 @@ DEFS = -DLOCALEDIR=\"$(datadir)/locale\" @DEFS@
 include_HEADERS = gsasl.h gsasl-compat.h
 
 libgsasl_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
-libgsasl_la_LIBADD = @LTLIBINTL@ ../crypto/libgc.la
+libgsasl_la_LIBADD = @LTLIBINTL@ ../gl/libgl.la ../crypto/libgc.la
 libgsasl_la_SOURCES = gsasl.h.in internal.h \
 	init.c done.c register.c error.c version.c common.c \
 	callback.c property.c callback-c.c callback-s.c \
