--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -111,11 +111,11 @@ AC_ARG_ENABLE(ntlm,
   AS_HELP_STRING([--disable-ntlm], [don't use the NTLM mechanism]),
   ntlm=$enableval)
 if test "$ntlm" != "no"; then
-	sj_CHECK_HEADERLIB(ntlm.h, ntlm, buildSmbNtlmAuthRequest,
+	sj_CHECK_HEADERLIB(ntlm.h, ntlm, ntlm_des_set_key,
 		[ntlm=yes
 		AC_DEFINE(USE_NTLM, 1, [Define to 1 if you want NTLM.])],
 		[ntlm=no
-		AC_MSG_WARN([Libntlm not found, disabling NTLM.])])
+		AC_MSG_WARN([Libntlm >= 0.3.5 not found, disabling NTLM.])])
 fi
 AC_MSG_CHECKING([if NTLM should be used])
 AC_MSG_RESULT($ntlm)
