Make SECURID client use new allocating API. Use new callback/property API in SECURID client.

--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -105,9 +105,11 @@ extern "C"
       GSASL_NO_AUTHID = 53,
       GSASL_NO_AUTHZID = 54,
       GSASL_NO_PASSWORD = 55,
-      GSASL_NO_SERVICE = 56,
-      GSASL_NO_HOSTNAME = 57,
-      GSASL_CANNOT_VALIDATE = 58
+      GSASL_NO_PASSCODE = 56,
+      GSASL_NO_PIN = 57,
+      GSASL_NO_SERVICE = 58,
+      GSASL_NO_HOSTNAME = 59,
+      GSASL_CANNOT_VALIDATE = 60
     } Gsasl_rc;
 
 /* Quality of Protection types, used by DIGEST-MD5 */
@@ -139,6 +141,9 @@ extern "C"
     GSASL_AUTHID,
     GSASL_AUTHZID,
     GSASL_PASSWORD,
+    GSASL_PASSCODE,
+    GSASL_SUGGESTED_PIN,
+    GSASL_PIN,
     GSASL_CLIENT_ANONYMOUS,
     GSASL_CLIENT_PASSCODE,
     GSASL_CLIENT_PIN,
