Make mechanism interface public.

--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -191,10 +191,50 @@ extern "C"
   typedef int (*Gsasl_callback_function) (Gsasl * ctx, Gsasl_session * sctx,
 					  Gsasl_property prop);
 
+  /* Mechanism function prototypes. */
+  typedef int (*Gsasl_init_function) (Gsasl * ctx);
+  typedef void (*Gsasl_done_function) (Gsasl * ctx);
+  typedef int (*Gsasl_start_function) (Gsasl_session * sctx, void **mech_data);
+  typedef int (*Gsasl_step_function) (Gsasl_session * sctx,
+				       void *mech_data,
+				       const char *input, size_t input_len,
+				       char **output, size_t * output_len);
+  typedef int (*Gsasl_finish_function) (Gsasl_session * sctx, void *mech_data);
+  typedef int (*Gsasl_code_function) (Gsasl_session * sctx,
+				      void *mech_data,
+				      const char *input, size_t input_len,
+				      char **output, size_t * output_len);
+
+  /* Collection of mechanism functions for either client or server. */
+  struct Gsasl_mechanism_functions
+  {
+    Gsasl_init_function init;
+    Gsasl_done_function done;
+    Gsasl_start_function start;
+    Gsasl_step_function step;
+    Gsasl_finish_function finish;
+    Gsasl_code_function encode;
+    Gsasl_code_function decode;
+  };
+  typedef struct Gsasl_mechanism_functions Gsasl_mechanism_functions;
+
+  /* Information about a mechanism. */
+  struct Gsasl_mechanism
+  {
+    const char *name;
+
+    struct Gsasl_mechanism_functions client;
+    struct Gsasl_mechanism_functions server;
+  };
+  typedef struct Gsasl_mechanism Gsasl_mechanism;
+
 /* Library entry and exit points: version.c, init.c, done.c */
   extern int gsasl_init (Gsasl ** ctx);
   extern void gsasl_done (Gsasl * ctx);
   extern const char *gsasl_check_version (const char *req_version);
+
+  /* Let library know about a new mechanism. */
+  extern int gsasl_register (Gsasl * ctx, const Gsasl_mechanism * mech);
 
 /* Callback handling: callback.c */
   extern void gsasl_application_data_set (Gsasl * ctx, void *appdata);
