--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,7 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-SUBDIRS = po gl lib src tests doc
+SUBDIRS = po gl lib src examples tests doc
 
 ACLOCAL_AMFLAGS = -I m4 -I gl/m4
 
