--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -52,30 +52,11 @@ extern "C"
     GSASL_NEEDS_MORE = 1,
     GSASL_UNKNOWN_MECHANISM = 2,
     GSASL_MECHANISM_CALLED_TOO_MANY_TIMES = 3,
-    GSASL_TOO_SMALL_BUFFER = 4,
     GSASL_FOPEN_ERROR = 5,
     GSASL_FCLOSE_ERROR = 6,
     GSASL_MALLOC_ERROR = 7,
     GSASL_BASE64_ERROR = 8,
     GSASL_CRYPTO_ERROR = 9,
-    GSASL_GCRYPT_ERROR = GSASL_CRYPTO_ERROR,
-    GSASL_NEED_CLIENT_ANONYMOUS_CALLBACK = 11,
-    GSASL_NEED_CLIENT_PASSWORD_CALLBACK = 12,
-    GSASL_NEED_CLIENT_PASSCODE_CALLBACK = 13,
-    GSASL_NEED_CLIENT_PIN_CALLBACK = 14,
-    GSASL_NEED_CLIENT_AUTHORIZATION_ID_CALLBACK = 15,
-    GSASL_NEED_CLIENT_AUTHENTICATION_ID_CALLBACK = 16,
-    GSASL_NEED_CLIENT_SERVICE_CALLBACK = 17,
-    GSASL_NEED_SERVER_VALIDATE_CALLBACK = 18,
-    GSASL_NEED_SERVER_CRAM_MD5_CALLBACK = 19,
-    GSASL_NEED_SERVER_DIGEST_MD5_CALLBACK = 20,
-    GSASL_NEED_SERVER_EXTERNAL_CALLBACK = 21,
-    GSASL_NEED_SERVER_ANONYMOUS_CALLBACK = 22,
-    GSASL_NEED_SERVER_REALM_CALLBACK = 23,
-    GSASL_NEED_SERVER_SECURID_CALLBACK = 24,
-    GSASL_NEED_SERVER_SERVICE_CALLBACK = 25,
-    GSASL_NEED_SERVER_GSSAPI_CALLBACK = 26,
-    GSASL_NEED_SERVER_RETRIEVE_CALLBACK = 27,
     GSASL_UNICODE_NORMALIZATION_ERROR = 28,
     GSASL_SASLPREP_ERROR = 29,
     GSASL_MECHANISM_PARSE_ERROR = 30,
@@ -85,6 +66,17 @@ extern "C"
     GSASL_NO_MORE_REALMS = 34,
     GSASL_NO_CLIENT_CODE = 35,
     GSASL_NO_SERVER_CODE = 36,
+    GSASL_INVALID_HANDLE = 50,
+    GSASL_NO_CALLBACK = 51,
+    GSASL_NO_ANONYMOUS_TOKEN = 52,
+    GSASL_NO_AUTHID = 53,
+    GSASL_NO_AUTHZID = 54,
+    GSASL_NO_PASSWORD = 55,
+    GSASL_NO_PASSCODE = 56,
+    GSASL_NO_PIN = 57,
+    GSASL_NO_SERVICE = 58,
+    GSASL_NO_HOSTNAME = 59,
+    GSASL_CANNOT_VALIDATE = 60,
     /* Mechanism specific errors. */
     GSASL_GSSAPI_RELEASE_BUFFER_ERROR = 37,
     GSASL_GSSAPI_IMPORT_NAME_ERROR = 38,
@@ -99,18 +91,7 @@ extern "C"
     GSASL_KERBEROS_V5_INTERNAL_ERROR = 47,
     GSASL_SHISHI_ERROR = GSASL_KERBEROS_V5_INTERNAL_ERROR,
     GSASL_SECURID_SERVER_NEED_ADDITIONAL_PASSCODE = 48,
-    GSASL_SECURID_SERVER_NEED_NEW_PIN = 49,
-    GSASL_INVALID_HANDLE = 50,
-    GSASL_NO_CALLBACK = 51,
-    GSASL_NO_ANONYMOUS_TOKEN = 52,
-    GSASL_NO_AUTHID = 53,
-    GSASL_NO_AUTHZID = 54,
-    GSASL_NO_PASSWORD = 55,
-    GSASL_NO_PASSCODE = 56,
-    GSASL_NO_PIN = 57,
-    GSASL_NO_SERVICE = 58,
-    GSASL_NO_HOSTNAME = 59,
-    GSASL_CANNOT_VALIDATE = 60
+    GSASL_SECURID_SERVER_NEED_NEW_PIN = 49
   } Gsasl_rc;
 
   /* Quality of Protection types, used by DIGEST-MD5 */
