Simplify callback hook.

--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -179,13 +179,11 @@ extern "C"
   extern const char *gsasl_check_version (const char *req_version);
 
   /* Callback handling: callback.c */
-  extern void gsasl_application_data_set (Gsasl * ctx, void *appdata);
-  extern void *gsasl_application_data_get (Gsasl * ctx);
-  extern void gsasl_appinfo_set (Gsasl_session * sctx, void *appdata);
-  extern void *gsasl_appinfo_get (Gsasl_session * sctx);
   extern void gsasl_callback_set (Gsasl * ctx, Gsasl_callback_function cb);
   extern int gsasl_callback (Gsasl * ctx, Gsasl_session * sctx,
 			     Gsasl_property prop);
+  extern void gsasl_callback_hook_set (Gsasl * ctx, void *hook);
+  extern void *gsasl_callback_hook_get (Gsasl * ctx);
 
   /* Property handling: property.c */
   extern void gsasl_property_set (Gsasl_session * sctx, Gsasl_property prop,
