--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -126,9 +126,7 @@ extern "C"
     GSASL_PASSCODE,
     GSASL_SUGGESTED_PIN,
     GSASL_PIN,
-    GSASL_CLIENT_ANONYMOUS,
-    GSASL_CLIENT_PASSCODE,
-    GSASL_CLIENT_PIN,
+    GSASL_ANONYMOUS_TOKEN,
     GSASL_CLIENT_SERVICE,
     GSASL_CLIENT_HOSTNAME,
     GSASL_CLIENT_QOP,
@@ -136,12 +134,12 @@ extern "C"
     GSASL_SERVER_VALIDATE,
     GSASL_SERVER_RETRIEVE,
     GSASL_SERVER_USEROK,
-    GSASL_SERVER_SECURID,
     GSASL_SERVER_CRAM_MD5,
     GSASL_SERVER_DIGEST_MD5,
     GSASL_SERVER_SERVICE,
-    GSASL_SERVER_EXTERNAL,
-    GSASL_SERVER_ANONYMOUS,
+    GSASL_VALIDATE_SECURID,
+    GSASL_VALIDATE_ANONYMOUS,
+    GSASL_VALIDATE_EXTERNAL,
     GSASL_SERVER_REALM,
     GSASL_SERVER_QOP,
     GSASL_SERVER_MAXBUF,
