Add new cram-md5 test.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -29,6 +29,8 @@ libutils_la_SOURCES = utils.h utils.c
 
 TESTS_ENVIRONMENT = THREADSAFETY_FILES=$(top_srcdir)/lib/*/*.c
 
-TESTS = simple cram-md5 digest-md5 md5file threadsafety
-check_PROGRAMS = simple cram-md5 digest-md5 md5file
+TESTS = simple cram-md5 digest-md5 md5file threadsafety \
+	old-cram-md5
+check_PROGRAMS = simple cram-md5 digest-md5 md5file \
+	old-cram-md5
 dist_check_SCRIPTS = threadsafety
