Support service and hostname properties.

--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -127,8 +127,8 @@ extern "C"
     GSASL_SUGGESTED_PIN,
     GSASL_PIN,
     GSASL_ANONYMOUS_TOKEN,
-    GSASL_CLIENT_SERVICE,
-    GSASL_CLIENT_HOSTNAME,
+    GSASL_SERVICE,
+    GSASL_HOSTNAME,
     GSASL_CLIENT_QOP,
     GSASL_CLIENT_MAXBUF,
     GSASL_SERVER_VALIDATE,
@@ -136,7 +136,6 @@ extern "C"
     GSASL_SERVER_USEROK,
     GSASL_SERVER_CRAM_MD5,
     GSASL_SERVER_DIGEST_MD5,
-    GSASL_SERVER_SERVICE,
     GSASL_VALIDATE_SECURID,
     GSASL_VALIDATE_ANONYMOUS,
     GSASL_VALIDATE_EXTERNAL,
