--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -120,31 +120,31 @@ extern "C"
   /* Callback/property types. */
   typedef enum
   {
-    GSASL_AUTHID,
-    GSASL_AUTHZID,
-    GSASL_PASSWORD,
-    GSASL_PASSCODE,
-    GSASL_SUGGESTED_PIN,
-    GSASL_PIN,
-    GSASL_ANONYMOUS_TOKEN,
-    GSASL_SERVICE,
-    GSASL_HOSTNAME,
-    GSASL_CLIENT_QOP,
-    GSASL_CLIENT_MAXBUF,
-    GSASL_SERVER_VALIDATE,
-    GSASL_SERVER_RETRIEVE,
-    GSASL_SERVER_USEROK,
-    GSASL_SERVER_CRAM_MD5,
-    GSASL_SERVER_DIGEST_MD5,
-    GSASL_VALIDATE_SECURID,
-    GSASL_VALIDATE_ANONYMOUS,
-    GSASL_VALIDATE_EXTERNAL,
-    GSASL_VALIDATE_GSSAPI,
-    GSASL_SERVER_REALM,
-    GSASL_SERVER_QOP,
-    GSASL_SERVER_MAXBUF,
-    GSASL_SERVER_CIPHER,
-    GSASL_GSSAPI_DISPLAY_NAME
+    GSASL_AUTHID = 1,
+    GSASL_AUTHZID = 2,
+    GSASL_PASSWORD = 3,
+    GSASL_PASSCODE = 4,
+    GSASL_SUGGESTED_PIN = 5,
+    GSASL_PIN = 6,
+    GSASL_ANONYMOUS_TOKEN = 7,
+    GSASL_SERVICE = 8,
+    GSASL_HOSTNAME = 9,
+    GSASL_CLIENT_QOP = 10,
+    GSASL_CLIENT_MAXBUF = 11,
+    GSASL_SERVER_VALIDATE = 12,
+    GSASL_SERVER_RETRIEVE = 13,
+    GSASL_SERVER_USEROK = 14,
+    GSASL_SERVER_CRAM_MD5 = 15,
+    GSASL_SERVER_DIGEST_MD5 = 16,
+    GSASL_VALIDATE_SECURID = 17,
+    GSASL_VALIDATE_ANONYMOUS = 18,
+    GSASL_VALIDATE_EXTERNAL = 19,
+    GSASL_VALIDATE_GSSAPI = 20,
+    GSASL_SERVER_REALM = 21,
+    GSASL_SERVER_QOP = 22,
+    GSASL_SERVER_MAXBUF = 23,
+    GSASL_SERVER_CIPHER = 24,
+    GSASL_GSSAPI_DISPLAY_NAME = 25
   } Gsasl_property;
 
   /**
