(update-po): Fix.

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,11 +27,10 @@ ACLOCAL_AMFLAGS = -I m4 -I gl/m4
 POURL = ftp://ftp.unex.es/pub/gnu-i18n/po/maint/$(PACKAGE)
 update-po:
 	cd po && \
-	wget --non-verbose --timestamping --retr-symlinks $(POURL)/??.po && \
-	cvs add ??.po || true && \
-	echo en@boldquot en@quot > LINGUAS && \
-	ls ??.po | sed 's/.po//' >> LINGUAS && \
-	cvs commit -m "Sync with TP." LINGUAS ??.po
+	wget --non-verbose --timestamping --retr-symlinks $(POURL)/*.po && \
+	cvs add `ls *.po | grep -v quot.po` || true && \
+	ls *.po | sed 's/.po//' > LINGUAS && \
+	cvs commit -m "Sync with TP." LINGUAS `ls *.po | grep -v quot.po`
 
 ChangeLog:
 	cvs2cl --fsf --FSF --usermap .cvsusers -I ChangeLog -I .cvs \
