--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,7 @@
 SUBDIRS = po gl lib src examples tests doc
 
 ACLOCAL_AMFLAGS = -I m4 -I gl/m4
+DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc
 
 # Maintainer targets
 
