*** empty log message ***

--- a/doc/reference/.cvsignore
+++ b/doc/reference/.cvsignore
@@ -1,27 +1,16 @@
 Makefile
 Makefile.in
-c4.html
-gsasl-decl-list.txt
-gsasl-decl.txt
-gsasl-doc.bottom
-gsasl-doc.top
-gsasl-gsasl.html
-gsasl-gsasl-compat.html
-gsasl-gsasl-mech.html
-gsasl-sections.txt
-gsasl-undocumented.txt
-gsasl-unused.sgml
-gsasl-unused.txt
-gsasl.sgml
-gsasl-compat.sgml
-gsasl-mech.sgml
-home.png
-index.html
-index.sgml
-left.png
-right.png
-scan.stamp
-sgml.stamp
-style.css
-tmpl.stamp
-up.png
+gsasl-overrides.txt
+gsasl.args
+gsasl.hierarchy
+gsasl.interfaces
+gsasl.prerequisites
+gsasl.signals
+html
+html-build.stamp
+html.stamp
+scan-build.stamp
+sgml-build.stamp
+tmpl
+tmpl-build.stamp
+xml
